--- a/ui/src/containers/PageHeader/Header.css
+++ b/ui/src/containers/PageHeader/Header.css
@@ -1,7 +1,8 @@
 .logo {
   width: 125px;
-  height: 31px;
-  background: rgba(255,255,255,.2);  
+  height: 30px;
+  background-image: url('../../images/ant_logo.png'); 
+  background-size: 125px 30px; 
   margin: 16px 24px 16px 0;
   float: left;
 }
