Worked on leave evaluation comment when user clicks approve or reject leave to send it to backend.Because of change in model on backend changed request leave on front-end, to be able to send correct data and make new leave after request.Removed add leaves route, controller and service methods because they are no longer valid. Added email of user that requested leave in main calendar view with color badge that represents current leave status.Added popover with all data in one field that shows first, last name and status for clarity.Started adding project components and routes.

--- a/ui/src/containers/LeaveEvaluate/LeaveEvaluate.css
+++ b/ui/src/containers/LeaveEvaluate/LeaveEvaluate.css
@@ -14,3 +14,13 @@
   font-size: 15px;
   font-weight: 500;
 }
+
+.flexCenter {
+  display: flex;
+  justify-content: center;
+}
+
+.leavesEvaluatedP {
+  font-size: 24px;
+  font-weight: 500;
+}
