Worked on improving page design and moving routes from container directory to separate routes directory, because in router v4 routes are components but still it is better for them to be in separate folder for easier readability of routes.Worked on 404, 500 pages and design when user hits wrong route or something happens on server with request.Worked on project view to list all project with skills that where used on that project by users that worked on that project.Now there is only project list with column 12 span

--- a/ui/src/containers/PageHeader/Header.css
+++ b/ui/src/containers/PageHeader/Header.css
@@ -6,3 +6,19 @@
   margin: 16px 24px 16px 0;
   float: left;
 }
+
+.header {
+  background: '#fff';
+}
+
+.trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color .3s;
+}
+
+.trigger:hover {
+  color: #1890ff;
+}
